# ArdicHappyFaces

./: .gitignore  README.md
Face Fecognition/: faceRecognition_fromImageFile.cpp  facevideo  video_facedetect.cpp
Face-Detection/: ArdicFaceExtractor  CMakeCache.txt  CMakeLists.txt  HOWTOCOMPILE.TXT  Makefile  ardic_face_extractor.cpp  ardic_face_extractor.cpp~  cmake_install.cmake
FaceTrackerSAndroid/: build.gradle
FaceTrackerSAndroid/app/: build.gradle
FaceTrackerSAndroid/app/src/main/: AndroidManifest.xml
FaceTrackerSAndroid/app/src/main/assets/: labels.txt  out.txt
FaceTrackerSAndroid/app/src/main/res/layout/: main.xml
FaceTrackerSAndroid/app/src/main/res/layout-land/: main.xml
FaceTrackerSAndroid/gradle/wrapper/: gradle-wrapper.properties
HappyFacesAndroidApp/: .gitignore  build.gradle
HappyFacesAndroidApp/app/: .gitignore  build.gradle
HappyFacesAndroidApp/app/src/main/: AndroidManifest.xml
HappyFacesAndroidApp/app/src/main/assets/: labels.txt
HappyFacesAndroidApp/app/src/main/res/drawable/: mylayoutshape.xml
HappyFacesAndroidApp/app/src/main/res/layout/: activity_select.xml  camera_layout_activity.xml
HappyFacesAndroidApp/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml
HappyFacesAndroidApp/gradle/wrapper/: gradle-wrapper.properties
HappyFacesApp/app/: build.gradle
HappyFacesApp/app/src/main/: AndroidManifest.xml
HappyFacesApp/app/src/main/res/values/: strings.xml
HappyFacesApp/gradle/wrapper/: gradle-wrapper.properties
Record a video/: recordvideo.py
(+48 files in other folders)
